@@ -1,4 +1,6 @@
 Unreleased version
+* Teach #move_to_child_of and #move_to_child_with_index to accept :root as a parameter [Micah Geisel](https://github.com/botandrose)
+* Add #roots method [Micah Geisel](https://github.com/botandrose)
 
 3.6.0
 * Support Rails 7.1 [Harshal Bhakta](https://github.com/harshalbhakta)
